<resources>
    <string name="app_name">TravelMapi</string>
    <array name="interval_values">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </array>
    <array name="update_intervals">
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_all_fields">Please enter all fields</string>
    <string name="start_date_before_end">End date must be after start date</string>
    <string name="trip_created">Trip Created</string>
    <string name="trip_exists">Trip Already Exists</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="show_log">SHOW LOG</string>
    <string name="date_time">Date Time</string>
    <string name="lat">Lat</string>
    <string name="longitude_short">Long</string>
    <string name="edit_trip_name">Edit Trip Name</string>
    <string name="edit_start">Edit Start</string>
    <string name="edit_end">Edit End</string>
    <string name="num_logs">%d Logs</string>
    <string name="user_id">User ID</string>
    <string name="options">OPTIONS</string>
    <string name="device_id">Device ID</string>
    <string name="tracking_speed">Tracking Speed</string>
    <string name="save_settings">Save Settings</string>
    <string name="data_synchronization">Data Synchronization</string>
    <string name="synchronize_now">Synchronize now</string>
    <string name="update_speed">Synchronization Speed</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="currently_running">is currently running</string>
    <string name="num_trips_active">There are %d active trips</string>
    <string name="title_activity_trip_map">Map</string>
    <string name="map">Show Map</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="start_logging">Start Logging</string>
    <string name="logging_stopped">Logging is stopped</string>
    <string name="logging_started">Logging Started</string>
    <string name="trip_list">Trip List</string>
    <string name="settings">Settings</string>
</resources>
