<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.travelmapi.app.travelmapi_app.EditDateDialogFragment">

<Button
    android:id="@+id/fragment_edit_date_edit_start"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/AppTheme.Button"
    android:paddingStart="75dp"
    android:paddingEnd="75dp"
    android:text="@string/edit_start"/>
    <Button
        android:id="@+id/fragment_edit_date_edit_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:text="@string/edit_end"/>
    <Button
        android:id="@+id/fragment_edit_date_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:text="@string/cancel"
        android:paddingStart="75dp"
        android:paddingEnd="75dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

</LinearLayout>
